--- a/MicroserviceBase.Application/MicroserviceBase.Application.csproj
+++ b/MicroserviceBase.Application/MicroserviceBase.Application.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="Jnz.RedisRepository" Version="1.0.6" />
     <PackageReference Include="MassTransit" Version="7.2.4" />
     <PackageReference Include="MediatR" Version="9.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0-rc.2.21480.5" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
