--- a/MicroserviceBase.Domain/MicroserviceBase.Domain.csproj
+++ b/MicroserviceBase.Domain/MicroserviceBase.Domain.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="Flunt" Version="2.0.5" />
     <PackageReference Include="Jnz.RedisRepository" Version="1.0.6" />
     <PackageReference Include="MediatR" Version="9.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0-rc.2.21480.5" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
     <PackageReference Include="Polly" Version="7.2.2" />
   </ItemGroup>
 
