Adjusting namespaces for release version

--- a/MicroserviceBase/appsettings.Development.json
+++ b/MicroserviceBase/appsettings.Development.json
@@ -9,7 +9,7 @@
     "MariaDb": "Server=127.0.0.1;Database=BUSINESS_PARTNER;Uid=root;Pwd=W3Pets@2503;SslMode=none;"
   },
   "RedisOptions": {
-    "Hosts": "localhost:6379",
+    "Hosts": [ "localhost:6379" ],
     "SyncTimeout": 500,
     "AsyncTimeout": 500,
     "KeepAlive": 180,
