--- a/MicroserviceBase/appsettings.json
+++ b/MicroserviceBase/appsettings.json
@@ -5,8 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "RabbitConfigs": {
-    "Host": "localhost"
+  "ConnectionStrings": {
+    "MariaDb": "Server=127.0.0.1;Database=BUSINESS_PARTNER;Uid=root;Pwd=W3Pets@2503;SslMode=none;"
+  },
+  "RedisOptions": {
+    "Hosts": "localhost:6379",
+    "SyncTimeout": 500,
+    "AsyncTimeout": 500,
+    "KeepAlive": 180,
+    "AbortConnectOnFail": false
+  },
+  "MicroserviceSettings": {
+    "Name": "MicroserviceBase",
+    "Port": "5096"
   }
 }
