--- a/MicroserviceBase/appsettings.Development.json
+++ b/MicroserviceBase/appsettings.Development.json
@@ -18,5 +18,11 @@
   "MicroserviceSettings": {
     "Name": "MicroserviceBase",
     "Port": "5096"
-  }
+  },
+  "RabbitConfig": {
+    "Host": "localhost",
+    "VirtualHost": "/",
+    "UserName": "guest",
+    "Password": "guest" 
+  } 
 }
